# video-transcriber

./: .gitignore  CLAUDE.md  LICENSE  README.md  demo_claude_haiku.py  demo_complete_transcription.py  demo_create_zip.py  pyproject.toml  pytest.ini  qwan-microprint_zip.py  requirements-test.txt  requirements.txt
.github/: FUNDING.yml
docs/: VideoTranscriber.odp  dataflow.md  demo-video-script.md  slides.md
examples/: transcript.md
notebooks/: spike.ipynb
output/: raspi-tony-smith_transcript.txt  tony_transcript.txt
plan/: audio-transcription-plan.md  hexagonal-architecture-refactoring.md  progress-2025-12-01.md  progress-2025-12-02.md  progress-2025-12-03.md  progress-2025-12-04.md  progress-2025-12-05.md  progress-2025-12-18.md  progress-2025-12-28.md  progress-2026-01-05.md
src/video_transcriber/: __init__.py  transcribe.py
src/video_transcriber/adapters/: __init__.py  claude_vision.py  ffmpeg_audio.py  ollama_vision.py  opencv_video.py  whisper_audio.py  zip_markdown_report.py
src/video_transcriber/domain/: __init__.py  frame_comparison.py  frame_selector.py  models.py  video_transcriber.py
src/video_transcriber/generators/: __init__.py  markdown_generator.py
src/video_transcriber/ports/: __init__.py  audio_extractor.py  audio_transcriber.py  video_reader.py  vision_transcriber.py
src/video_transcriber/testing/: __init__.py  fake_audio.py
tests/helpers/: __init__.py  fake_audio.py  fake_video.py  fake_vision.py
tests/integration/: __init__.py  test_audio_adapters.py  test_claude_adapter.py  test_ollama_adapter.py  test_opencv_adapter.py
tests/unit/: test_fake_audio.py  test_fake_video.py  test_fake_vision.py  test_frame_comparison.py  test_markdown_generator.py  test_video_transcriber_use_case.py  test_video_transcriber_with_audio.py  test_zip_markdown_report.py
