[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-transcriber"
version = "0.3.1"
description = "A Python project following TDD principles"
authors = [{name = "Romilly Cocking", email = "romilly.cocking@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python",
    "numpy",
    "Pillow",
    "faster-whisper"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov",
    "notebook",
    "build",
]

[project.urls]
Homepage = "https://github.com/romilly/video-transcriber"
Repository = "https://github.com/romilly/video-transcriber.git"
Issues = "https://github.com/romilly/video-transcriber/issues"

[tool.setuptools.packages.find]
where = ["src"]